--- a/RetailManagement/appsettings.json
+++ b/RetailManagement/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server= Arpan\\SQLEXPRESS; Database=Reatil;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
